# vscode_cmake_template

./: CMakeLists.txt  README.md
include/: head.h
src/: main.cpp
